--- a/css/Sass/_grid.scss
+++ b/css/Sass/_grid.scss
@@ -1,7 +1,9 @@
+// GRID
+
 .grid {
 	margin-left: 70px;
 	margin-right: 70px;
-	margin-bottom: 70px;
+	margin-bottom: 25px;
 }
 
 /* clear fix */
@@ -14,23 +16,87 @@
 .grid-item {
 	position: relative;
   float: left;
-	height: 200px;
-	width: 200px;
+	height: 225px;
+	width: 225px;
 	margin: 15px;
 	background: #ff0000;
 }
 
 .grid-item--rectangle {
-		width: 430px;
+		width: 480px;
 	}
 
 .grid-item--lg-square {
-		width: 430px;
-		height: 430px;
+		width: 480px;
+		height: 480px;
 	}
 
 .grid-item--portrait-rectangle {
-		width: 215px;
-		height: 430px;	
+		width: 240px;
+		height: 480px;	
 	}
+
+.grid-item {
+	padding: 10px;
+	h3 {
+		padding: 15px 10px 5px 25px;
+	}
+	p {
+		padding: 10px 25px;
+	}
+}
+
+#about-block {
+	background: $pink-orange;
+	color: $white;
+	p {
+		margin-top: 30px;
+		font-weight: 300;
+		font-size: 18px;
+		line-height: 1.6;
+	}
+}
+
+
+.discussion-block {
+	background: $grey;
+	color: $white;
+	p {
+		font-size: 24px;
+		font-weight: 300;
+		margin-bottom: 20px;
+	}
+}
+
+.after-summit-block {
+	background: $accent_color;
+	text-align: center;
+	p {
+		color: $white;
+		font-size: 20px;
+		font-weight: 300;
+		padding: 75px 15px;
+	}
+}
+
+.logistics-block {
+	background: $pearl;
+	text-align: center;
+	p {
+		font-size: 20px;
+		font-weight: 300;
+		padding: 75px 15px;
+	}
+}
+
+.twitter-block {
+	background: $pearl;
+	p {
+		padding: 25px 25px 0px 25px;
+		font-weight: 300;
+		font-size: 18px;
+		line-height: 1.6;
+	}
+}
+
 
