about page styles except some assets

--- a/css/Sass/_header.scss
+++ b/css/Sass/_header.scss
@@ -14,6 +14,23 @@
 	padding-top: 25px;
 	padding-bottom: 10px;
 	padding-left: 25px;
+	&:hover {
+		position: relative;
+		color: $accent_color !important;
+			&:after {
+				content: "";
+				border-bottom: 1px dashed $grey;
+				position: absolute;
+				width: 78%;
+				margin-left: 25px;
+				left: 0;
+				right: 0;
+				bottom: 0px;
+			}
+		}
+		&:visited {
+			color: $accent_color;
+		}
 
 }
 
