--- a/css/Sass/main.scss
+++ b/css/Sass/main.scss
@@ -3,6 +3,7 @@
 
 @import "variables";
 @import "header";
+@import "footer";
 @import "grid";
 
 
@@ -46,7 +47,7 @@ a {
 }
 
 .bottom_divider {
-	border-bottom: 1px dotted $medium_grey;
+	border-bottom: 1px dashed $medium_grey;
 }
 
 //JUMBOTRON
@@ -176,123 +177,153 @@ a {
 	margin-left: 25px;
 }
 
+// ABOUT PAGE
 
-// FOOTER
-
-footer {
-	background: $grey;
-	color: $light_grey;
-	a {
-		color: $white;
-		&:hover, &:active, &:focus {
-			color: $white;
-		}
+.about-page, #objectives, .after-the-summit  {
+	padding-top: 60px;
+	padding-bottom: 60px;
+	h3 {
+		color: $pink_orange;
 	}
-	.email-sign-up {
-		padding: 20px 0 40px 10px;
-		margin-bottom: 25px;
-		h2 {
-			text-align: center;
-			font-size: 32px;
-			font-weight: 300;
-			margin-top: 5px;
-		}
-		h4 {
-			color: $white;
-			font-size: 15px;
-			text-transform: uppercase;
-			text-align: center;
-			font-family: $secondary_font;
-			font-weight: 500;
-			margin-top: 30px;
-			margin-bottom: 0;
-		}
-	}
-
-	.input-group {
-		width: 50%;
-		margin: 0 auto;
-	}
-
-	.input-group .form-control {
-		border: 1px solid $medium_grey;
-	}
-
-	.btn-default {
-		border-radius: 0 !important;
-		border: 1px solid transparent;
-		height: 55px;
-		background: transparent;
-		position: absolute;
-		right: 26px;
-		color: $white;
-		font-size: 16px;
-		transition: $transition;
-		&:hover, &:active, &:focus {
-			background: transparent;
-			color: $accent_color;
-			border-color: transparent;
-			box-shadow: none;
-		}
-	}
-
-	.form-control {
-		margin-left: 3em;
-		margin-top: 1em;
-		height: 55px;
-		border-radius: 0px !important;
-		border: 1px solid $white;
-		padding: 20px 15px;
+	p {
+		color: $black;
 		font-size: 20px;
-		border: 1px solid $medium_grey;
-		background-color: transparent;
-		color: $white;
-		font-family: $secondary_font;
-		text-transform: uppercase;
-		font-weight: 500;
-		box-shadow: none;
-		transition: $transition;
-		&:focus, &:active, &:hover {
-			background-color: #B1B4B7;
-			border-color: $medium_grey;
-			box-shadow: none;
-		}
-	}
-
-	.btn {
-		transition: $transition;
-		&:active, &:focus {
-			outline: initial;
-			outline-color: none;
-			background-color: transparent;
-		}
-	}
-
-	.btn:active:focus, .btn:focus {
-		outline: initial;
-		background-color: transparent;
-		border-color: transparent;
-	}
-
-
-	ul { 
-		margin-top: 25px;
-		margin-bottom: 25px;
-		text-align: center;
-		li {
-		display: inline-block;
-			&:nth-of-type(1) {
-				margin-right: 20px;
-				color: $medium_grey;
-			}
-			&:nth-of-type(2) {
-				margin-right: 20px;
-			}
-		}
+		font-weight: 300;
+		line-height: 1.6;
 	}
 }
 
+.infographic {
+	border-bottom: 1px dashed $grey;
+	padding-bottom: 60px;
+	margin-bottom: 20px;
+}
+
+.graphic-placeholder, .graphic-caption {
+	height: 275px;
+	margin-bottom: 40px;
+}
+
+.graphic-placeholder {
+	background: $orange;
+}
+
+.graphic-caption {
+	background: $light_grey;
+	padding: 25px 35px 25px 25px;;
+	p {
+		font-weight: 300;
+		line-height: 1.6;
+		color: $grey;
+		font-size: 18px;
+		margin-top: 15px;
+	}
+}
+
+#quote {
+	background: $accent_color;
+	margin-bottom: 20px;
+	p {
+		color: $white;
+		font-weight: 300;
+		font-size: 28px;
+		line-height: 1.6;
+		margin-top: 70px;
+	}
+	.accented_text {
+		color: $white;
+	}
+
+	h3 {
+		color: $white;
+	}
+}
+
+.photo-placeholder {
+
+	height: 175px;
+	width: 250px;
+	background: $pearl;
+	margin: 70px 35px 70px 70px;;
+}
 
 
+// RESOURCES BUTTONS 
+.resource-type {
+	position: relative;
+	top: -3px;
+	display: inline-block;
+	margin-left: 10px;
+	margin-right: 5px;
+	padding: 6px 12px;
+	border-radius: 7px;
+	color: $pink_orange;
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: 600;
+	border: 1px solid $pink_orange;
+}
 
+.right-arrow {
+	height: 0px;
+	width: 0px;
+	border-top: 7px solid transparent;
+	border-bottom: 7px solid transparent;	
+	border-left: 12.124px solid rgba(35,31,32,0.25); // to make equilateral triangle: (border-top width + border-bottom width) * 0.866
+	float: right;
+	margin-top: 12px;
+	margin-bottom: 16px;
+	transition: $transition;
+	
+}
+
+#button-text {
+	font-size: 19px;
+	font-weight: 500;
+	text-transform: initial;
+}
+
+.pdf-button {
+	background-color: $white;
+}
+
+
+.btn-default {
+	width: 100%;
+	border: 1px solid transparent;
+	color: $black;
+	margin: 20px 0;
+	padding: 10px 16px;
+	border-radius: 5px;
+	text-align: left;
+	transition: $transition;
+	.resource-type {
+		transition: $transition;
+	}
+	&:hover, &:active, &:focus {
+		border: 1px solid transparent;
+		box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+		.resource-type {
+			color: #fff;
+			background-color: $pink_orange;
+		}
+		.right-arrow {
+			border-left: 12.124px solid rgba(35,31,32,0.5);
+		}
+	}
+	h4 {
+		display: inline-block;
+		font-size: 16px;
+		color: $black;
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+}
+
+.after-the-summit {
+	background: url(../img/landing_hero.png);
+	height: 400px;
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
 
